Update file paths for image and CV

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 	 padding-bottom: 100px; 
         }
         .profile-pic {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            margin: 20px auto;
-            display: block;
-        }
+    		width: 200px;  /* Set the desired width */
+    		height: auto;  /* Adjust height proportionally */
+    		display: block;
+    		margin: 20px auto;
+    		border-radius: 0; /* Remove rounded corners */
+	}
+
         section {
             margin: 20px 0;
         }
@@ -97,9 +98,9 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <img src="your-picture.jpg" alt="Your Picture" class="profile-pic">
+            <img src="Photo.jpg" alt="Your Picture" class="profile-pic">
             <p>Hello! I am Vivian (Jingcheng) Yu, an academic professional with expertise in financial engineering and actuarial science. I am broadly interested in risk management and finance.</p>
-            <p>You can view my full CV by clicking <a href="your-cv-link.pdf" target="_blank">here</a>.</p>
+            <p>You can view my full CV by clicking <a href="CV.pdf" target="_blank">here</a>.</p>
         </section>
 
         <section id="projects">
