--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <section id="about">
             <h2>About Me</h2>
             <img src="Photo.jpg" alt="Your Picture" class="profile-pic">
-            <p>Hello! I am Vivian (Jingcheng) Yu, an academic professional with expertise in financial engineering and actuarial science. I am broadly interested in risk management and finance.</p>
+            <p>Hello! I am Vivian (Jingcheng) Yu, a Ph.D. student in Actuarial Science at the University of Waterloo, specializing in risk management and finance. My academic focus is on developing innovative strategies to enhance financial stability and risk assessment in markets, aiming to bridge theoretical research with practical industry applications.</p>
             <p>You can view my full CV by clicking <a href="CV.pdf" target="_blank">here</a>.</p>
         </section>
 
